--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
     }
   ],
   "minimum-stability": "dev",
+  "require": {
+    "php": "7.1.0"
+  },
   "require-dev": {
     "phpcompatibility/php-compatibility": "master",
+    "wp-coding-standards/wpcs": "master",
     "dealerdirect/phpcodesniffer-composer-installer": "master"
   }
 }
