--- a/.github/workflows/php_cs.yml
+++ b/.github/workflows/php_cs.yml
@@ -1,6 +1,10 @@
-name: CI_PHPCS_WP
+name: RFD_GitHub_CI
 
-on: push
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -13,5 +17,8 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
-      - name: Run CS
+      - name: Run PHPStan
+        run: vendor/bin/phpstan analyse . -l8 --memory-limit=1G
+
+      - name: Run PHPCS
         run: vendor/bin/phpcs --standard=phpcs.xml .
